# lyricwave

./: Cargo.toml  Cross.toml  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
crates/lyricwave-cli/: Cargo.toml
crates/lyricwave-cli/src/: cli.rs  config.rs  main.rs
crates/lyricwave-cli/src/commands/: backends.rs  capture.rs  daemon.rs  devices.rs  mod.rs  pipeline.rs  providers.rs  record.rs  video.rs  visual.rs
crates/lyricwave-core/: Cargo.toml
crates/lyricwave-core/src/: lib.rs  mux.rs  recording.rs  service.rs  video.rs
crates/lyricwave-core/src/audio/: backend.rs  cpal_backend.rs  mod.rs
crates/lyricwave-core/src/audio/backends/: cpal_ffmpeg.rs  cpal_native.rs  mod.rs  registry.rs
crates/lyricwave-core/src/audio/backends/platform/: common.rs  linux.rs  macos.rs  macos_sc_capture.swift  mod.rs  unsupported.rs  windows.rs
crates/lyricwave-core/src/audio/selection/: loopback.rs  mod.rs  selector.rs
crates/lyricwave-core/src/composition/: mod.rs
crates/lyricwave-core/src/pipeline/: engines.rs  events.rs  hub.rs  mod.rs  providers.rs
crates/lyricwave-core/src/pipeline/providers/: deepl_translator.rs  libretranslate_translator.rs  mock_asr.rs  mock_translator.rs  mod.rs  passthrough_translator.rs  registry.rs  types.rs  vibevoice_file_asr.rs
crates/lyricwave-core/src/recording/: mod.rs
crates/lyricwave-core/src/video/: backend.rs  mod.rs
crates/lyricwave-core/src/video/backends/: mod.rs  native_platform.rs  registry.rs
crates/lyricwave-core/src/video/backends/platform/: linux.rs  macos.rs  mod.rs  unsupported.rs  windows.rs
crates/lyricwave-core/src/visual/: backend.rs  mod.rs
crates/lyricwave-core/src/visual/backends/: mod.rs  native_platform.rs  registry.rs
crates/lyricwave-core/src/visual/backends/platform/: linux.rs  macos.rs  mod.rs  unsupported.rs  windows.rs
docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  USAGE.md  USAGE.zh-CN.md
