[package]
name = "lyricwave-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "lyricwave"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
ctrlc.workspace = true
hound.workspace = true
serde_json.workspace = true
tokio.workspace = true
lyricwave-core = { path = "../lyricwave-core" }
