[package]
name = "lyricwave-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "lyricwave"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
ctrlc.workspace = true
dirs.workspace = true
env_logger.workspace = true
hound.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
lyricwave-core = { path = "../lyricwave-core" }
